idf_component_register(
  SRCS
    "main.cpp"
    "LED/LED.cpp"
    "Timer/Timer.cpp"
    "Motor/Motor.cpp"
    "IMU/IMU.cpp"
    "IMU/IMUSender.cpp"
    "IRSensor/IRSensor.cpp"
    "Camera/Camera.cpp"
    "WiFi/WiFiManager.cpp"
    "UDPServer/UDPServer.cpp"
    "Robot/Robot.cpp"
  INCLUDE_DIRS
    "."
    "LED"
    "Timer"
    "Motor"
    "IMU"
    "IRSensor"
    "Camera"
    "WiFi"
    "UDPServer"
    "Robot"
)
